<resources>
    <string name="app_name">BienEstar</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="usuario">USUARIO</string>
    <string name="hintus">Ingresar Usuario</string>
    <string name="registro_de_usuario">LOG IN</string>
    <string name="ingresar">INGRESAR</string>
    <string name="PASSWORD">Contraseña</string>
    <string name="hintcon">Ingresar contraseña</string>
    <string name="pregunta">¿No estás registrado?</string>
    <string name="Registrate">Crea una cuenta</string>

    <string name="tituloform">Ingresa los siguientes datos:</string>
    <string name="nombreform">Nombre:</string>
    <string name="apellidoform">Apellido:</string>
    <string name="edadform">Edad:</string>
    <string name="usrform">Usuario:</string>
    <string name="generoform">Selecciona tu género:</string>
    <string name="mailform">Ingresa tu correo:</string>
    <string-array name="género">
        <item> Hombre </item>
        <item> Mujer</item>
    </string-array>
    <string name="btncancel">CANCELAR</string>
    <string name="btnaddusr">CREAR CUENTA</string>


    <string name="MenuP">Menú Principal</string>
    <string name="btnEntrada">Agregar Entrada</string>
    <string name="btnConsulta">Consulta</string>
    <string name="btnInfo">Información de la Cuenta</string>
    <string name="btnDatos">Pasos!</string>
    <string name="btnStatus">Status</string>
    <string name="bntLogro">Logros</string>
    <string name="btnDiabetes">Cuestionario Diabetes</string>
    <string name="btnPresion">Test de Framingham</string>


    <string name="tipodato">SELECCIONA EL TIPO DE DATO A INGRESAR</string>


    <string name="TituloPre">Contesta las siguientes preguntas, con 1 como menor y 5 como mayor </string>
    <string name="iniP1">Pregunta 1 </string>
    <string name="iniP2">Pregunta 2 </string>
    <string name="iniP3">Pregunta 3 </string>
    <string name="iniP4">Pregunta 4 </string>
    <string name="iniP5">Pregunta 5 </string>


    <string name="TituloDiabetes">¿Está usted en riesgo de padecer diabetes tipo 2?</string>
    <string name="SubDiabetes">Llene las preguntas  de acuerdo a las  instrucciones</string>
    <string name="P1">1.¿Qué edad tiene? </string>
    <string name="P1op1">Menos de 40 años </string>
    <string name="P1op2">40-49 años </string>
    <string name="P1op3">50-59 años </string>
    <string name="P1op4">60 años o más </string>

    <string name="P2">2.¿Es usted hombre o mujer? </string>
    <string name="P2op1">Hombre </string>
    <string name="P2op2">Mujer </string>

    <string name="P3">3.Si es mujer, ¿tuvo alguna vez diabetes gestacional (glucosa/azúcar alta durante el embarazo)? </string>
    <string name="P3op1">Si </string>
    <string name="P3op2">No </string>

    <string name="P4">4.¿Tiene familiares (mamá, papá, hermano, hermana) que padecen diabetes? </string>
    <string name="P4op1">Si </string>
    <string name="P4op2">No </string>

    <string name="P5">5.¿Alguna vez le ha dicho un profesional de salud que tiene presión arterial alta (o hipertensión)? </string>
    <string name="P5op1">Si </string>
    <string name="P5op2">No </string>

    <string name="P6">6.¿Realiza algún tipo de actividad física? </string>
    <string name="P6op1">Si </string>
    <string name="P6op2">No </string>

    <string name="P7">7.Acorde a la tabla, ¿Cuál es su peso? </string>
    <string name="Texto7">Para ver la tabla referencial haga clic </string>




    <string name="TituloPresion">Porcentaje de Riesgo</string>

    <string name="PP1">1.¿Cuál es su género? </string>
    <string name="PP1op1">Hombre </string>
    <string name="PP1op2">Mujer </string>

    <string name="PP2">2.¿Cuál es su edad? </string>
    <string name="PP2op1">20-34 </string>
    <string name="PP2op2">35-39 </string>
    <string name="PP2op3">40-44 </string>
    <string name="PP2op4">45-49 </string>
    <string name="PP2op5">50-54 </string>
    <string name="PP2op6">55-59 </string>
    <string name="PP2op7">60-64 </string>
    <string name="PP2op8">65-69 </string>
    <string name="PP2op9">70-74 </string>
    <string name="PP2op10">75-79 </string>

    <string name="PP3">3.¿Cuál es su colesterol total? </string>
    <string name="PP3op1">menor a 160 </string>
    <string name="PP3op2">160-199 </string>
    <string name="PP3op3">200-239 </string>
    <string name="PP3op4">240-279 </string>
    <string name="PP3op5">>=280 </string>

    <string name="PP4">4.¿Usted fuma? </string>
    <string name="PP4op1">Si </string>
    <string name="PP4op2">No </string>

    <string name="PP5">5.¿Cuál es su nivel HDL? </string>
    <string name="PP5op1">>=60 </string>
    <string name="PP5op2">50-59 </string>
    <string name="PP5op3">40-49 </string>
    <string name="PP5op4">mayor a 40 </string>

    <string name="PP6">6.¿Está en algún tratamiento para la presión sistólica? </string>
    <string name="PP6op1">Si </string>
    <string name="PP6op2">No </string>

    <string name="PP7">7.¿Cuál es su presión sistólica? </string>
    <string name="PP7op1"> menor a 120 </string>
    <string name="PP7op2">120-129 </string>
    <string name="PP7op3">130-139 </string>
    <string name="PP7op4">140-159 </string>
    <string name="PP7op5">>=160 </string>

</resources>
