<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CuestiPresion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:text="@string/TituloPresion"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textView333"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:text="@string/SubDiabetes"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Pregunta1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/PP1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioip1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/button2"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/i11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/PP1op1" />

                <RadioButton
                    android:id="@+id/i12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP1op2" />



            </RadioGroup>

            <TextView
                android:id="@+id/Pregunta2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/PP2"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioip2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/button2"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/i21"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/PP2op1" />
                <RadioButton
                    android:id="@+id/i22"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/PP2op2" />

                <RadioButton
                    android:id="@+id/i23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP2op3" />
                <RadioButton
                    android:id="@+id/i24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP2op4" />
                <RadioButton
                    android:id="@+id/i25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP2op5" />
                <RadioButton
                    android:id="@+id/i26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP2op6" />
                <RadioButton
                    android:id="@+id/i27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP2op7" />
                <RadioButton
                    android:id="@+id/i28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP2op8" />
                <RadioButton
                    android:id="@+id/i29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP2op9" />
                <RadioButton
                    android:id="@+id/i210"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP2op10" />

            </RadioGroup>


            <TextView
                android:id="@+id/Pregunta3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/PP3"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioip3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/button2"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/i31"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/PP3op1" />

                <RadioButton
                    android:id="@+id/i32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP3op2" />
                <RadioButton
                    android:id="@+id/i33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP3op3" />
                <RadioButton
                    android:id="@+id/i34"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP3op4" />
                <RadioButton
                    android:id="@+id/i35"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP3op5" />



            </RadioGroup>


            <TextView
                android:id="@+id/Pregunta4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/PP4"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioip4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/button2"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/i41"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/PP4op1" />

                <RadioButton
                    android:id="@+id/i42"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP4op2" />


            </RadioGroup>

            <TextView
                android:id="@+id/Pregunta5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/PP5"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioip5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/button2"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/i51"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/PP5op1" />

                <RadioButton
                    android:id="@+id/i52"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP5op2" />

                <RadioButton
                    android:id="@+id/i53"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP5op3" />

                <RadioButton
                    android:id="@+id/i54"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP5op4" />


            </RadioGroup>

            <TextView
                android:id="@+id/Pregunta6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/PP6"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioip6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/button2"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/i61"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/PP6op1" />

                <RadioButton
                    android:id="@+id/i62"
                    android:layout_width="66dp"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP6op2" />

            </RadioGroup>


            <TextView
                android:id="@+id/Pregunta7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/PP7"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioip7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/button2"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/i71"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/PP7op1" />

                <RadioButton
                    android:id="@+id/i72"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP7op2" />

                <RadioButton
                    android:id="@+id/i73"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP7op3" />

                <RadioButton
                    android:id="@+id/i74"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP7op4" />

                <RadioButton
                    android:id="@+id/i75"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/PP7op5" />


            </RadioGroup>


            <Button
                android:id="@+id/btnAceptar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="Aceptar"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>